--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <span class="logotext">Microsoft</span>
             </div>
             <div class="companylogo">
-                <img src="./41.images/Linkedin.svg" alt="Linkedin" class="svgimage">
+                <img src="./41.images/linkedin.svg" alt="Linkedin" class="svgimage">
                 <span class="logotext">Linkedin</span>
             </div>
             <div class="companylogo">
