--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <!-- card5 starts -->
                 <div class="featurecard">
                     <div class="iconcontainer">
-                        <img src="./41.images/WhatsApp Image 2024-07-25 at 20.29.32_17c330c8.jpg" alt="image" class="featuresvg">
+                        <img src="./41.images/response.jpg" alt="image" class="featuresvg">
                     </div>
                     <div class="featureinfo">
                        <div class="featuretitle">Responsive Support</div>
