--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         <img src="./41.images/instagram.svg" alt="Instagram" class="socialicon">
                     </a>
                     <a href="#" class="sociallink">
-                        <img src="./41.images/linkedin.svg" alt="Linkedin" class="socialicon">
+                        <img src="./41.images/linkedin-copy.svg" alt="Linkedin" class="socialicon">
                     </a>
                     <a href="#" class="sociallink">
                         <img src="./41.images/github.svg" alt="Github" class="socialicon">
